--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,8 +1,9 @@
 .footer{
     background-color: black;
     width: 100%;
-    height: 1000px;
+    height: auto;
     color: white;
+    margin-top: auto;
 }
 .footer:hover{
     cursor: pointer;
@@ -15,8 +16,9 @@
     justify-content: space-between;
     margin: auto;
     height: auto;
-    line-height: auto;
+    line-height: 12px;
     font-size: 14px;
+    
    
    
     
@@ -41,19 +43,26 @@
     grid-template-rows: auto;
     grid-gap: 5px;
     margin-left:20px ;
+    line-height: 10px;
 }
 .bottom_footer{
     display: flex;
-    border: 1px solid red;
+   
     width: 90%;
     height: 90px;
     margin: auto;
+    justify-content: space-between;
     
 }
 .bottom_footer img{
     width: 150px;
 }
 .bottom_footer>div{
-    margin-right: 20px;
-    border: 1px solid teal;
+    margin-right: 40px;
+   
+}
+.social img{
+   height: 70%;
+   width: 200px;
+  
 }
