--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,12 +1,3 @@
-.nav_background{
-    background-image: url("https://res.cloudinary.com/urbanclap/image/upload/images/growth/home-screen/1615375782838-f890f8.jpeg");
-    height: 600px;
-    width: 100%;
-    color: white;
-    
-
-}
-
 .nav_container{
     width: 80%;
     height: 80px;
@@ -14,6 +5,9 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
+    background-color:grey;
+    padding: 10px;
+    border-radius: 5px;
 
 }
 .headings{
@@ -31,18 +25,4 @@
 .logo:hover{
     cursor: pointer;
     
-}
-
-.head1{
-    
-    font-size: 14px;
-    font-weight: bold;
-}
-.head1:hover{
-    cursor: pointer;
-}
-.head2{
-    font-size: 50px;
-    margin-top: -10px;
-   
 }
