--- a/src/Components/LandingDetails.module.css
+++ b/src/Components/LandingDetails.module.css
@@ -38,6 +38,7 @@
     
     font-size: 14px;
     font-weight: bold;
+    text-align: center;
 }
 .head1:hover{
     cursor: pointer;
@@ -45,6 +46,7 @@
 .head2{
     font-size: 50px;
     margin-top: -10px;
+    text-align: center;
    
 }
 .searchBar{
@@ -66,6 +68,7 @@
 .msg{
  text-decoration: underline;
  font-weight: bold;
+ text-align: center;
 }
 .msg:hover{
     cursor: pointer;
@@ -105,6 +108,9 @@
 }
 .s_row>div{
     margin: auto;
+}
+.home_repairs{
+    text-align: center;
 }
 .repairs{
     width: 60%;
