--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -16,7 +16,8 @@
     justify-content: space-between;
     margin: auto;
     height: auto;
-    line-height: 12px;
+    margin-left: 85px;
+    
     font-size: 14px;
     
    
@@ -43,7 +44,7 @@
     grid-template-rows: auto;
     grid-gap: 5px;
     margin-left:20px ;
-    line-height: 10px;
+   
 }
 .bottom_footer{
     display: flex;
