--- a/src/Components/LandingDetails.module.css
+++ b/src/Components/LandingDetails.module.css
@@ -38,6 +38,7 @@
     
     font-size: 14px;
     font-weight: bold;
+    text-align: center;
 }
 .head1:hover{
     cursor: pointer;
@@ -45,6 +46,7 @@
 .head2{
     font-size: 50px;
     margin-top: -10px;
+    text-align: center;
    
 }
 .searchBar{
@@ -66,6 +68,7 @@
 .msg{
  text-decoration: underline;
  font-weight: bold;
+ text-align: center;
 }
 .msg:hover{
     cursor: pointer;
@@ -73,23 +76,27 @@
 .home_icons{
     height: 230px;
     width: 70%;
-   
+    justify-content: center;
+    align-items: center;
+    display: block;
     margin:auto;
     margin-top: -80px;
     background-color: white;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin-bottom: 50px;
-}
-.home_icons:hover{
-    cursor: pointer;
+    text-decoration: underline;
+    
 }
 .f_row{
     display: flex;
+    margin-bottom: 20px;
 }
 .f_row img{
     width: 40px;
     height: 40px;
+    display: block;
+  
 }
 .f_row>div{
     margin: auto;
@@ -102,9 +109,14 @@
 .s_row img{
     width: 40px;
     height: 40px;
+    display: block;
 }
 .s_row>div{
     margin: auto;
+}
+.home_repairs{
+    text-align: center;
+    font-size: 30px;
 }
 .repairs{
     width: 60%;
